--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>SiteDsk</title>
-  <!-- <base href="https://Saikiran-dsk.github.io/my-site/"> -->
-  <base href="/">
+  <base href="https://Saikiran-dsk.github.io/my-site/">
+  <!-- <base href="/"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png">
   
